metro.log

> guinote2@0.2.0 start
> react-native start --reset-cache


Welcome to React Native v0.80
Starting dev server on http://localhost:8081


                        ▒▒▓▓▓▓▒▒
                     ▒▓▓▓▒▒░░▒▒▓▓▓▒
                  ▒▓▓▓▓░░░▒▒▒▒░░░▓▓▓▓▒
                 ▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓
                 ▓▓░░░░░▒▓▓▓▓▓▓▒░░░░░▓▓
                 ▓▓░░▓▓▒░░░▒▒░░░▒▓▒░░▓▓
                 ▓▓░░▓▓▓▓▓▒▒▒▒▓▓▓▓▒░░▓▓
                 ▓▓░░▓▓▓▓▓▓▓▓▓▓▓▓▓▒░░▓▓
                 ▓▓▒░░▒▒▓▓▓▓▓▓▓▓▒░░░▒▓▓
                  ▒▓▓▓▒░░░▒▓▓▒░░░▒▓▓▓▒
                     ▒▓▓▓▒░░░░▒▓▓▓▒
                        ▒▒▓▓▓▓▒▒


 WARN  the transform cache was reset.
                Welcome to Metro v0.82.5
              Fast - Scalable - Integrated


 INFO  Dev server ready. Press Ctrl+C to exit.
 INFO  Interactive mode is not supported in this environment
 INFO  Connection established to app='org.reactjs.native.example.guinote2' on device='iPhone 16 Pro'.
 INFO  [1m[7m💡 JavaScript logs have moved![22m They can now be viewed in React Native DevTools. Tip: Type [1mj[22m in the terminal to open (requires Google Chrome or Microsoft Edge).[27m
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0.0% (0/1)
 BUNDLE  ./index.js ▓▓▓▓▓▓▓▓▓▓░░░░░░ 65.4% (650/804)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0.0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0.0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0.0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0.0% (0/1)
 BUNDLE  ./index.js 
 ERROR  SyntaxError: /Users/maiky/Documents/guinote2/src/hooks/useNetworkGameState.ts: Unexpected token, expected "," (235:4)

  233 |       return hand;
  234 |     }, [localGameState, userId, getCurrentPlayerHand, isPlayerTurn])
> 235 |     isPlayerTurn,
      |     ^
  236 |     thinkingPlayer: null, // TODO: Implement AI thinking for network games
  237 |     isDealingComplete,
  238 |     completeDealingAnimation,
 ERROR  SyntaxError: /Users/maiky/Documents/guinote2/src/hooks/useNetworkGameState.ts: Unexpected token, expected "," (251:4)

  249 |       return null;
  250 |     }, [localGameState, remotePlayers])
> 251 |     isDealingComplete,
      |     ^
  252 |     completeDealingAnimation,
  253 |     completeTrickAnimation,
  254 |     setGameState: setLocalGameState,
